--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -38,7 +38,7 @@
             <footer>
                 <p>
                     &copy; 2021 Hot Club Worms -
-                    <a href="#">Impressum</a> -
+                    <%= link_to "Impressum", "/imprint.html" %> -
                     <a href="#">Datenschutzerkl&auml;ung</a>
                 </p>
             </footer>
