Add privacy policy

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -37,9 +37,9 @@
             </main>
             <footer>
                 <p>
-                    &copy; 2021 Hot Club Worms -
+                    &copy; 2021 Sebastian Christ -
                     <%= link_to "Impressum", "/imprint.html" %> -
-                    <a href="#">Datenschutzerkl&auml;ung</a>
+                    <%= link_to "Datenschutzerklärung", "/privacy-policy.html" %>
                 </p>
             </footer>
         </div>
