Add ensemble page with styling

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -31,10 +31,10 @@
                     Menu
                     <i class="fas fa-bars"></i>
                 </a>
-                <a href="#">Band</a>
                 <a href="#">Media</a>
                 <a href="#">Termine</a>
                 <a href="#">Kontakt</a>
+                <%= link_to "Ensemble", "/ensemble.html" %>
             </nav>
             <main role="main">
                 <%= yield %>
