--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -7,6 +7,7 @@
 :root {
     --color-primary: #14854F;
     --font-family-sans: "Open Sans", sans-serif;
+    --gutter-size: 3rem;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -57,4 +58,17 @@ nav {
 
 footer {
     font-size: 1.2rem;
+}
+
+.card-image {
+    height: 25rem;
+    width: 25rem;
+}
+
+// larger viewport
+
+@media screen and (min-width: 600px) {
+    .profile-image {
+        padding-top: 5%;
+    }
 }
