Add mailto link for contact

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -32,9 +32,9 @@
                     <i class="fas fa-bars"></i>
                 </a>
                 <a href="#">Termine</a>
-                <a href="#">Kontakt</a>
                 <%= link_to "Ensemble", "/ensemble.html" %>
                 <%= link_to "Media", "/media.html" %>
+                <%= link_to "Kontakt", "mailto:booking@hotclubworms.de" %>
             </nav>
             <main role="main">
                 <%= yield %>
