--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -65,6 +65,10 @@ footer {
     width: 25rem;
 }
 
+.event {
+    margin-bottom: 2rem;;
+}
+
 // larger viewport
 
 @media screen and (min-width: 600px) {
