Add links to YT and Instagram

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -35,6 +35,12 @@
                 <%= link_to "Media", "/media.html" %>
                 <%= link_to "Termine", "/concerts.html" %>
                 <%= link_to "Kontakt", "mailto:booking@hotclubworms.de" %>
+                <% link_to "https://www.instagram.com/hotclubworms/" do %>
+                    <i class="fab fa-instagram"></i>
+                <% end %>
+                <% link_to "https://www.youtube.com/channel/UCE5cYaqH8XRtUiIkSReGpiw" do %>
+                    <i class="fab fa-youtube"></i>
+                <% end %>
             </nav>
             <main role="main">
                 <%= yield %>
