--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -3,7 +3,7 @@ title: Ensemble
 ---
 
 <article>
-    <section>
+    <section class="ensemble">
         <h1>Ensemble</h1>
         <div class="row">
             <div class="col-6">
@@ -11,8 +11,10 @@ title: Ensemble
                 <p><%= lorem.paragraph %></p>
             </div>
             <div class="col-2"></div>
-            <div class="col-2 profile-image">
-                <%= image_tag "sax.jpg" %>
+            <div class="col-4">
+                <div class="profile-image">
+                    <%= image_tag "sax.jpg" %>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -21,8 +23,10 @@ title: Ensemble
                 <p><%= lorem.paragraph %></p>
             </div>
             <div class="col-2"></div>
-            <div class="col-2 profile-image">
-                <%= image_tag "guitar.jpg" %>
+            <div class="col-4">
+                <div class="profile-image">
+                    <%= image_tag "guitar.jpg" %>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -31,8 +35,10 @@ title: Ensemble
                 <p><%= lorem.paragraph %></p>
             </div>
             <div class="col-2"></div>
-            <div class="col-2 profile-image">
-                <%= image_tag "guitar.jpg" %>
+            <div class="col-4">
+                <div class="profile-image">
+                    <%= image_tag "guitar.jpg" %>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -41,8 +47,10 @@ title: Ensemble
                 <p><%= lorem.paragraph %></p>
             </div>
             <div class="col-2"></div>
-            <div class="col-2 profile-image">
-                <%= image_tag "guitar.jpg" %>
+            <div class="col-4">
+                <div class="profile-image">
+                    <%= image_tag "guitar.jpg" %>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -51,8 +59,10 @@ title: Ensemble
                 <p><%= lorem.paragraph %></p>
             </div>
             <div class="col-2"></div>
-            <div class="col-2 profile-image">
-                <%= image_tag "bass.jpg" %>
+            <div class="col-4">
+                <div class="profile-image">
+                    <%= image_tag "bass.jpg" %>
+                </div>
             </div>
         </div>
     </section>
