--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -7,7 +7,7 @@
 :root {
     --color-primary: #14854F;
     --font-family-sans: "Open Sans", sans-serif;
-    --gutter-size: 3rem;
+    --gutter-size: 45rem;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -69,13 +69,20 @@ footer {
     margin-bottom: 2rem;;
 }
 
+.profile-image {
+    width: 330px;
+    height: 260px;
+}
+
+.profile-image img {
+    object-fit: cover;
+    width: 100%;
+    height:100%;
+}
+
 // larger viewport
 
 @media screen and (min-width: 600px) {
-    .profile-image {
-        padding-top: 5%;
-    }
-
     #main-nav.tabs {
         flex-direction: row;
     }
@@ -86,5 +93,9 @@ footer {
 
     #main-nav.tabs > a:not(:first-child) {
         display: block;
+    }
+
+    section.ensemble .row {
+        margin-bottom: 5rem;
     }
 }
