Better design for events

--- a/source/concerts.html.erb
+++ b/source/concerts.html.erb
@@ -6,27 +6,37 @@ title: Termine
         <div class="row">
             <div class="col">
                 <h2>Upcoming</h2>
-                <p>Derzeit stehen keine anstehenden Veranstaltungen.</p>
+                <div class="row event">
+                    <div class="card">
+                        <em>Bensheim</em><br/>
+                        <strong>22. August 2020 - 11:00 Uhr</strong>
+                        <header>
+                            <h3>Hochst&auml;dter Haus</h3>
+                        </header>
+                        <p>Optinale Details: <%= lorem.sentences 2 %></p>
+                        <a href="https://hochstädter-haus.de/">Link</a>
+                    </div>
+                </div>
             </div>
             <div class="col">
                 <h2>Veranstaltungen</h2>
                 <div class="row event">
                     <div class="card">
+                        <em>Mannheim</em><br/>
+                        <strong>07. Juli 2020 - 11:30 Uhr</strong>
                         <header>
-                            <strong>07. Juli 2020 - 11:30 Uhr</strong>
-                            <h4>Jazz Brunch</h4>
+                            <h3>Jazz Brunch</h3>
                         </header>
-                        <p>Details: <%=lorem.words 20 %></p>
                         <a href="javascript:;">Link</a>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="event card">
+                <div class="row event">
+                    <div class="card">
+                        <em>Kopf</em><br/>
+                        <strong>01. Januar 2020 - 13:00 Uhr</strong>
                         <header>
-                            <strong>01. Januar 2020 - 13:00 Uhr</strong>
-                            <h4>Imagin&auml;res Jazz Festival</h4>
+                            <h3>Imagin&auml;res Jazz Festival</h3>
                         </header>
-                        <p>Details: <%=lorem.words 20 %></p>
                         <a href="javascript:;">Link</a>
                     </div>
                 </div>
