Add Jakob's profile text

--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -32,11 +32,49 @@ title: Ensemble
         <div class="row">
             <div class="col-6">
                 <h4>Jakob Shabbir</h4>
-                <p><%= lorem.paragraph %></p>
+                <p>
+                    Jakob Shabbir, in Friedrichshafen am Bodensee
+                    geboren, ist ein Mitglied einer musikalischen
+                    Sinti-Familie, die ihre Wurzeln in Deutschland und
+                    Frankreich hat.
+                </p>
+                <p>
+                    Im Alter von 16 Jahren begann er auf der Gitarre
+                    zu zupfen und hatte bereits ein gutes Gehör für
+                    Musik.  Hierbei wurde er von seinen Vorbildern,
+                    unter anderem Django Reinhardt, Baden Powell,
+                    Costa Lucaks, Jimmy Rosenberg und Pat Martino
+                    inspiriert.  Auch innerhalb seiner Familie, hier
+                    Onkel Ringo und Robert Köhler, Jazz Gitarristen
+                    aus dem Bodenseekreis, haben Jakob in seiner
+                    Anfangszeit unterstützt und ihn mit den Grundlagen
+                    des Instruments vertraut gemacht.  Im Alter von 19
+                    Jahren gründete Jakob seine damalige Bandformation
+                    <strong>Impro Tower</strong>, die am Bodensee das
+                    Publikum als Jazz Band unterhielt. Neben Saxophon,
+                    Klavier, Schlagzeug und Gesang hat Jakob als
+                    Gitarrist den Kern dieser Band formiert und
+                    ausgebaut.
+                </p>
+                <p>
+                    Ende 2019 gründete Jakob Shabbir mit Sebastian
+                    Christ den <strong>Hot Club Worms</strong>, der
+                    sich intensiv mit der Musik Django Reinhardts
+                    auseinander setzt.
+                </p>
+                <p>
+                    Seit Beginn seines musikalischen Wirkens
+                    interessiert er sich für verschiedene Arten von
+                    Musik wie Jazz manouche, Klassik, Bossa Nova,
+                    Bebop und Fusion.  Von seinem stetigen Interesse
+                    angetrieben hat Jakob über die Jahre seine
+                    Kenntnisse erweitert und zählt nunmehr als
+                    Kernmitglied des Hot Club Worms.
+                </p>
             </div>
             <div class="col-2"></div>
             <div class="col-4">
-                <div class="profile-image">
+                <div class="profile-image is-full-width">
                     <%= image_tag "guitar.jpg" %>
                 </div>
             </div>
