--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -82,12 +82,30 @@ title: Ensemble
         <div class="row">
             <div class="col-6">
                 <h4>Sebastian Rudolfo Christ</h4>
-                <p><%= lorem.paragraph %></p>
+                <p>
+                    Sebastian <strong>Rudolfo</strong> Christ ist ein
+                    in Worms am Rhein ansässiger Jazz-Gitarrist und
+                    Kontrabassist.
+                </p>
+                <p>
+                    Sein Spezialgebiet sind die frühen Jazz-Stile der
+                    20er und 30er Jahre des zwanzigsten
+                    Jahrhunderts. Sein Hauptaugenmerk liegt hierbei
+                    auf der Musik Django Reinhardts, heute Jazz
+                    manouche genannt.
+                </p>
+                <p>
+                    Aktuell spielt er mit verschiedenen lokalen
+                    Ensembles im Rhein-Neckar- und Rhein-Main-Gebiet
+                </p>
+                <p>
+                    <%= link_to "Website", "https://www.rudolfochristguitar.de/" %>
+                </p>
             </div>
             <div class="col-2"></div>
             <div class="col-4">
-                <div class="profile-image">
-                    <%= image_tag "guitar.jpg" %>
+                <div class="profile-image is-full-width">
+                    <%= image_tag "sebastian.jpg" %>
                 </div>
             </div>
         </div>
