Fix profile image width

--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -12,7 +12,7 @@ title: Ensemble
             </div>
             <div class="col-2"></div>
             <div class="col-4">
-                <div class="profile-image">
+                <div class="profile-image is-full-width">
                     <%= image_tag "sax.jpg" %>
                 </div>
             </div>
@@ -24,7 +24,7 @@ title: Ensemble
             </div>
             <div class="col-2"></div>
             <div class="col-4">
-                <div class="profile-image">
+                <div class="profile-image is-full-width">
                     <%= image_tag "guitar.jpg" %>
                 </div>
             </div>
@@ -116,7 +116,7 @@ title: Ensemble
             </div>
             <div class="col-2"></div>
             <div class="col-4">
-                <div class="profile-image">
+                <div class="profile-image is-full-width">
                     <%= image_tag "bass.jpg" %>
                 </div>
             </div>
