Fix event styling

--- a/source/concerts.html.erb
+++ b/source/concerts.html.erb
@@ -7,9 +7,9 @@ title: Termine
             <div class="col">
                 <h2>Upcoming</h2>
                 <div class="row event">
-                    <div class="card">
+                    <div class="card is-full-width">
                         <em>Bensheim</em><br/>
-                        <strong>22. August 2020 - 11:00 Uhr</strong>
+                        <strong>22. August 2021 - 11:00 Uhr</strong>
                         <header>
                             <h3>Hochst&auml;dter Haus</h3>
                         </header>
@@ -21,7 +21,7 @@ title: Termine
             <div class="col">
                 <h2>Veranstaltungen</h2>
                 <div class="row event">
-                    <div class="card">
+                    <div class="card is-full-width">
                         <em>Mannheim</em><br/>
                         <strong>07. Juli 2020 - 11:30 Uhr</strong>
                         <header>
@@ -31,7 +31,7 @@ title: Termine
                     </div>
                 </div>
                 <div class="row event">
-                    <div class="card">
+                    <div class="card is-full-width">
                         <em>Kopf</em><br/>
                         <strong>01. Januar 2020 - 13:00 Uhr</strong>
                         <header>
