--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -65,10 +65,6 @@ footer {
     width: 25rem;
 }
 
-.event {
-    margin-bottom: 2rem;;
-}
-
 .profile-image {
     height: 260px;
 }
@@ -77,6 +73,11 @@ footer {
     object-fit: cover;
     width: 100%;
     height:100%;
+}
+
+.event {
+    margin-bottom: 2rem;
+    padding: 0 2rem;
 }
 
 .event .card em {
@@ -100,9 +101,5 @@ footer {
 
     section.ensemble .row {
         margin-bottom: 5rem;
-    }
-
-    .event .card {
-        width: 90%;
     }
 }
