Add Achim's profile details

--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -8,18 +8,35 @@ title: Ensemble
         <div class="row">
             <div class="col-6">
                 <h4>Achim Kraus</h4>
-                <p><%= lorem.paragraph %></p>
+                <p>
+                    Achim (ts, as ss) kann mittlerweile auf über etwa
+                    40 Jahre Banderfahrung zurückblicken. Im Laufe der
+                    Zeit und durch wechselnde Musikformationen ergab
+                    sich für ihn eine Wanderung durch verschiedene
+                    Stilrichtungen in der Reihenfolge: Dixieland,
+                    Swing, Mainstream (Real Book Stücke), Oldies und
+                    Pop und zuletzt, und auch noch aktuell, Vocal
+                    Jazzrock (<a href="http://www.groovin-nana.de/">Groovin'Nana</a>).
+                </p>
+                <p>
+                    Durch die Mitwirkung bei <strong>Hot Club
+                    Worms</strong> findet er stilistisch nunmehr
+                    wieder zu seinen musikalischen Anfängen zurück und
+                    bringt dabei seine Erfahrungen aus den anderen
+                    Musik-Richtungen mit ein.
+                </p>
             </div>
             <div class="col-2"></div>
             <div class="col-4">
                 <div class="profile-image is-full-width">
-                    <%= image_tag "sax.jpg" %>
+                    <%= image_tag "achim.jpg" %>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-6">
                 <h4>Alexander Herbrandt</h4>
+                <p><%= lorem.paragraph %></p>
                 <p><%= lorem.paragraph %></p>
             </div>
             <div class="col-2"></div>
