--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -4,22 +4,23 @@ title: Ensemble
 
 <article>
     <section class="ensemble">
+        <button id="bw-toggle" class="button outline primary">Toggle Schwarzweiss</button>
         <h1>Ensemble</h1>
         <div class="row">
             <div class="col-6">
-                <h4>Achim Kraus</h4>
+                <h4>Achim Kraus (ts, as, ss)</h4>
                 <p>
-                    Achim (ts, as ss) kann mittlerweile auf über etwa
-                    40 Jahre Banderfahrung zurückblicken. Im Laufe der
-                    Zeit und durch wechselnde Musikformationen ergab
-                    sich für ihn eine Wanderung durch verschiedene
+                    Achim kann mittlerweile auf über etwa 40 Jahre
+                    Banderfahrung zurückblicken. Im Laufe der Zeit und
+                    durch wechselnde Musikformationen ergab sich für
+                    ihn eine Wanderung durch verschiedene
                     Stilrichtungen in der Reihenfolge: Dixieland,
                     Swing, Mainstream (Real Book Stücke), Oldies und
                     Pop und zuletzt, und auch noch aktuell, Vocal
                     Jazzrock (<a href="http://www.groovin-nana.de/">Groovin'Nana</a>).
                 </p>
                 <p>
-                    Durch die Mitwirkung bei <strong>Hot Club
+                    Durch die Mitwirkung beim <strong>Hot Club
                     Worms</strong> findet er stilistisch nunmehr
                     wieder zu seinen musikalischen Anfängen zurück und
                     bringt dabei seine Erfahrungen aus den anderen
@@ -35,9 +36,10 @@ title: Ensemble
         </div>
         <div class="row">
             <div class="col-6">
-                <h4>Alexander Herbrandt</h4>
+                <h4>Alexander Herbrandt (g)</h4>
                 <p><%= lorem.paragraph %></p>
                 <p><%= lorem.paragraph %></p>
+                <p></p>
             </div>
             <div class="col-2"></div>
             <div class="col-4">
@@ -48,10 +50,10 @@ title: Ensemble
         </div>
         <div class="row">
             <div class="col-6">
-                <h4>Jakob Shabbir</h4>
+                <h4>Jakob Shabbir (g)</h4>
                 <p>
                     Jakob Shabbir, in Friedrichshafen am Bodensee
-                    geboren, ist ein Mitglied einer musikalischen
+                    geboren, ist Mitglied einer musikalischen
                     Sinti-Familie, die ihre Wurzeln in Deutschland und
                     Frankreich hat.
                 </p>
@@ -113,7 +115,7 @@ title: Ensemble
                 </p>
                 <p>
                     Aktuell spielt er mit verschiedenen lokalen
-                    Ensembles im Rhein-Neckar- und Rhein-Main-Gebiet
+                    Ensembles im Rhein-Neckar- und Rhein-Main-Gebiet.
                 </p>
                 <p>
                     <%= link_to "Website", "https://www.rudolfochristguitar.de/" %>
@@ -128,7 +130,7 @@ title: Ensemble
         </div>
         <div class="row">
             <div class="col-6">
-                <h4>Ben</h4>
+                <h4>Ben (b)</h4>
                 <p><%= lorem.paragraph %></p>
             </div>
             <div class="col-2"></div>
