Add smaller images for Sebastian

--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -100,7 +100,7 @@ title: Ensemble
         </div>
         <div class="row">
             <div class="col-6">
-                <h4>Sebastian Rudolfo Christ</h4>
+                <h4>Sebastian Rudolfo Christ (g)</h4>
                 <p>
                     Sebastian <strong>Rudolfo</strong> Christ ist ein
                     in Worms am Rhein ansässiger Jazz-Gitarrist und
