--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -136,7 +136,7 @@ title: Ensemble
             <div class="col-2"></div>
             <div class="col-4">
                 <div class="profile-image is-full-width">
-                    <%= image_tag "bass.jpg" %>
+                    <%= image_tag "ben.jpg", class: "positioned"%>
                 </div>
             </div>
         </div>
