--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -69,10 +69,17 @@ footer {
     height: 260px;
 }
 
-.profile-image img {
-    object-fit: cover;
-    width: 100%;
-    height:100%;
+.profile-image {
+    img {
+        object-fit: cover;
+        width: 100%;
+        height:100%;
+
+        &.positioned {
+            height: inherit;
+            object-position: top center;
+        }
+    }
 }
 
 .event {
