Add profile Alex' profile description

--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -37,9 +37,27 @@ title: Ensemble
         <div class="row">
             <div class="col-6">
                 <h4>Alexander Herbrandt (g)</h4>
-                <p><%= lorem.paragraph %></p>
-                <p><%= lorem.paragraph %></p>
-                <p></p>
+                <p>
+                    Alexander Herbrandt hat einen Teil seiner Kindheit
+                    in Russland verbracht und lernte die ersten
+                    Akkorde von seinem Vater. Spielte dann viele Jahre
+                    russischen Chanson und die Gitarre wurde sein
+                    ständiger Begleiter.
+                </p>
+                <p>
+                    In seiner Studienzeit wurde er für die klassische
+                    Gitarre begeistert und lernte wenige der wichtigen
+                    Solostücke, was ihn technisch stark voran brachte.
+                </p>
+                <p>
+                    Durch seine Frau und die vielen Aufenthalte in
+                    Spanien verliebte er sich in die Flamenco Musik
+                    und hatte etwas Zeit in die Spiel-Techniken
+                    einzutauschen, bevor er 2019 Sebastian und Jakob
+                    traf. Seit dem begleitet er beim <strong>Hot Club Worms</strong>
+                    enthusiastisch mit Lust auf mehr Virtuosität,
+                    Rhythmus und dem crunchigen Sound.
+                </p>
             </div>
             <div class="col-2"></div>
             <div class="col-4">
