Add profile picture of Jakob.

--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -112,7 +112,7 @@ title: Ensemble
             <div class="col-2"></div>
             <div class="col-4">
                 <div class="profile-image is-full-width">
-                    <%= image_tag "guitar.jpg" %>
+                    <%= image_tag "jakob.jpg" %>
                 </div>
             </div>
         </div>
