--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -148,8 +148,8 @@ title: Ensemble
         </div>
         <div class="row">
             <div class="col-6">
-                <h4>Ben (b)</h4>
-                <p><%= lorem.paragraph %></p>
+                <h4>Ben Melzer (b)</h4>
+                <p>Ben ist der Hausbassist im <strong>Hot Club Worms</strong>.</p>
             </div>
             <div class="col-2"></div>
             <div class="col-4">
