--- a/source/media.html.erb
+++ b/source/media.html.erb
@@ -1,10 +1,52 @@
 ---
 title: Media
 ---
-
-<article>
-    <section>
-        <h1>Fotos und Videos</h1>
-        <p>Hier gibt es leider noch nichts zu sehen....</p>
-    </section>
-</article>
+<h1>Fotos und Videos</h1>
+<div class="row">
+    <div class="col">
+        <iframe
+            width="100%"
+            height="315px"
+            src="https://www.youtube.com/embed/IzomSV_9WKY"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
+    </div>
+    <div class="col">
+        <iframe
+            width="100%"
+            height="315px"
+            src="https://www.youtube.com/embed/Xt-bpDdKfO0"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
+    </div>
+</div>
+<div class="row">
+    <div class="col">
+        <iframe
+            width="100%"
+            height="315px"
+            src="https://www.youtube.com/embed/rsae6bFHYaE"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
+    </div>
+    <div class="col">
+        <iframe
+            width="100%"
+            height="315px"
+            src="https://www.youtube.com/embed/doVLqNn9j2I"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
+    </div>
+</div>
