Active state in nav

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -31,9 +31,9 @@
                     Menu
                     <i class="fas fa-bars"></i>
                 </a>
-                <%= link_to "Ensemble", "/ensemble.html" %>
-                <%= link_to "Media", "/media.html" %>
-                <%= link_to "Termine", "/concerts.html" %>
+                <%= nav_link "Ensemble", "/ensemble" %>
+                <%= nav_link "Media", "/media" %>
+                <%= nav_link "Termine", "concerts" %>
                 <%= link_to "Kontakt", "mailto:booking@hotclubworms.de" %>
                 <% link_to "https://www.instagram.com/hotclubworms/" do %>
                     <i class="fab fa-instagram"></i>
