--- a/source/media.html.erb
+++ b/source/media.html.erb
@@ -2,51 +2,62 @@
 title: Media
 ---
 <h1>Fotos und Videos</h1>
-<div class="row">
-    <div class="col">
-        <iframe
-            width="100%"
-            height="315px"
-            src="https://www.youtube.com/embed/IzomSV_9WKY"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-        </iframe>
+<p id="yt-cookie-notice">Um die Videos sehen zu können, müssen Sie Cookies erlauben!</p>
+<div id="video-container">
+    <div class="row">
+        <div class="col">
+            <div class="yt-container">
+                <iframe
+                    width="100%"
+                    height="315px"
+                    data-src="https://www.youtube.com/embed/IzomSV_9WKY"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+        <div class="col">
+            <div class="yt-container">
+                <iframe
+                    width="100%"
+                    height="315px"
+                    data-src="https://www.youtube.com/embed/Xt-bpDdKfO0"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
     </div>
-    <div class="col">
-        <iframe
-            width="100%"
-            height="315px"
-            src="https://www.youtube.com/embed/Xt-bpDdKfO0"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-        </iframe>
-    </div>
-</div>
-<div class="row">
-    <div class="col">
-        <iframe
-            width="100%"
-            height="315px"
-            src="https://www.youtube.com/embed/rsae6bFHYaE"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-        </iframe>
-    </div>
-    <div class="col">
-        <iframe
-            width="100%"
-            height="315px"
-            src="https://www.youtube.com/embed/doVLqNn9j2I"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-        </iframe>
+    <div class="row">
+        <div class="col">
+            <div class="yt-container">
+                <iframe
+                    width="100%"
+                    height="315px"
+                    data-src="https://www.youtube.com/embed/rsae6bFHYaE"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+        <div class="col">
+            <div class="yt-container">
+                <iframe
+                    width="100%"
+                    height="315px"
+                    data-src="https://www.youtube.com/embed/doVLqNn9j2I"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
     </div>
 </div>
