--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -91,6 +91,10 @@ footer {
     font-size: 1.2rem;
 }
 
+#band-bio {
+    margin-top: 2%;
+}
+
 // larger viewport
 
 @media screen and (min-width: 600px) {
