--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,40 @@
 <article>
     <section>
         <%= image_tag "band.jpg" %>
-        <p><%= lorem.paragraphs 3 %></p>
+        <div class="row">
+            <div class="col">
+                <div id="band-bio">
+                    <p>
+                        Nasses Kopfsteinpflaster glänzt im abendlichen Laternenschein. Ein augenscheinlich verliebtes Paar schlendert
+                        eng umschlungen über das Trottoir. Und aus nicht allzu weiter Ferne erklingt die Musik, die zum Soundtrack
+                        einer ganzen Stadt werden sollte.
+                    </p>
+
+                    <p>
+                        In den beginnenden Dreißiger Jahren des letzten Jahrhunderts wurde von vier Ausnahmemusikern eine neue
+                        Musikrichtung geboren, welche untrennbar mit dem Paris und dem Flair der damaligen Zeit verbunden ist. Der <b>Hot
+                        Club Worms</b> bringt dieses Gefühl in das Rheinhessen der Gegenwart.
+                    </p>
+
+                    <p>
+                        Die fünf Musiker aus Worms und Umgebung spielen Hot Jazz ganz im Sinne des Quintette du Hot Club de France,
+                        jenes legendäre Quintette gegründet von Django Reinhardt und Stéphane Grappelli im Paris der 1930er Jahre.
+                        Der einzige Unterschied besteht lediglich in der Tatsache, daß die Geige durch ein Saxophonen ersetzt wurde,
+                        was diesem sonst sehr traditionellen Quinette einen außerordentlich
+                        modernen Klang verleiht.
+                    </p>
+
+                    <p>
+                        Der <b>Hot Club Worms</b> spielt klassische Early Jazz und Swing Stücke aus dem Great American Songbook, gängiges
+                        Jazz manouche Repertoire sowie Bossa Nova und Rhumba inspirierte Rhythmen.
+                    </p>
+
+                    <p>
+                        Ob Duo oder Trio, bis hin zum Qunitett, der <b>Hot Club Worms</b> spielt in unterschiedlichen Formationen und wird
+                        dadurch jedem Anlaß musikalisch gerecht.
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 </article>
