Coherent Quintette wording

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -30,7 +30,7 @@
                     </p>
 
                     <p>
-                        Ob Duo oder Trio, bis hin zum Qunitett, der <b>Hot Club Worms</b> spielt in unterschiedlichen Formationen und wird
+                        Ob Duo oder Trio, bis hin zum Qunitette, der <b>Hot Club Worms</b> spielt in unterschiedlichen Formationen und wird
                         dadurch jedem Anlaß musikalisch gerecht.
                     </p>
                 </div>
