--- a/source/promoter.html.erb
+++ b/source/promoter.html.erb
@@ -22,7 +22,7 @@ title: Promoter 1-Sheet
         </p>
 
         <p>
-            Ob Duo oder Trio, bis hin zum Qunitett, der <b>Hot Club Worms</b> spielt in unterschiedlichen Formationen und wird
+            Ob Duo oder Trio, bis hin zum Qunitette, der <b>Hot Club Worms</b> spielt in unterschiedlichen Formationen und wird
             dadurch jedem Anlaß musikalisch gerecht.
         </p>
     </div>
