Remove placeholder text

--- a/source/concerts.html.erb
+++ b/source/concerts.html.erb
@@ -13,7 +13,7 @@ title: Termine
                         <header>
                             <h3>Hochst&auml;dter Haus</h3>
                         </header>
-                        <p>Optinale Details: <%= lorem.sentences 2 %></p>
+                        <p>Jazz Frühschoppen</p>
                         <a href="https://hochstädter-haus.de/">Link</a>
                     </div>
                 </div>
