Fix typos for rollout

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,7 +13,7 @@
         <div id="top" class="container">
             <div id="cookies-eu-banner" class="card" style="display: none;">
                 Diese Seite verwendet Cookies. Bitte akzeptieren Sie Cookies um die Benutzung dieser Seite zu optimieren.
-                <%= link_to "Mehr erfahren", "/privacy-policy.html#cookies", id: "cookies-eu-more" %>
+                <%= link_to "Mehr erfahren.", "/privacy-policy.html#cookies", id: "cookies-eu-more" %>
                 <div>
                     <button class="button outline secondary" id="cookies-eu-reject">Ablehnen</button>
                     <button class="button success" id="cookies-eu-accept">Akzeptieren</button>
