--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -7,66 +7,6 @@ title: Ensemble
         <h1>Ensemble</h1>
         <div class="row">
             <div class="col-6">
-                <h4>Achim Kraus (ts, as, ss)</h4>
-                <p>
-                    Achim kann mittlerweile auf über etwa 40 Jahre
-                    Banderfahrung zurückblicken. Im Laufe der Zeit und
-                    durch wechselnde Musikformationen ergab sich für
-                    ihn eine Wanderung durch verschiedene
-                    Stilrichtungen in der Reihenfolge: Dixieland,
-                    Swing, Mainstream (Real Book Stücke), Oldies und
-                    Pop und zuletzt, und auch noch aktuell, Vocal
-                    Jazzrock (<a href="http://www.groovin-nana.de/">Groovin'Nana</a>).
-                </p>
-                <p>
-                    Durch die Mitwirkung beim <strong>Hot Club
-                    Worms</strong> findet er stilistisch nunmehr
-                    wieder zu seinen musikalischen Anfängen zurück und
-                    bringt dabei seine Erfahrungen aus den anderen
-                    Musik-Richtungen mit ein.
-                </p>
-            </div>
-            <div class="col-2"></div>
-            <div class="col-4">
-                <div class="profile-image is-full-width">
-                    <%= image_tag "achim.jpg" %>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-6">
-                <h4>Alexander Herbrandt (g)</h4>
-                <p>
-                    Alexander Herbrandt hat einen Teil seiner Kindheit
-                    in Russland verbracht und lernte die ersten
-                    Akkorde von seinem Vater. Spielte dann viele Jahre
-                    russischen Chanson und die Gitarre wurde sein
-                    ständiger Begleiter.
-                </p>
-                <p>
-                    In seiner Studienzeit wurde er für die klassische
-                    Gitarre begeistert und lernte wenige der wichtigen
-                    Solostücke, was ihn technisch stark voran brachte.
-                </p>
-                <p>
-                    Durch seine Frau und die vielen Aufenthalte in
-                    Spanien verliebte er sich in die Flamenco Musik
-                    und hatte etwas Zeit in die Spiel-Techniken
-                    einzutauschen, bevor er 2019 Sebastian und Jakob
-                    traf. Seit dem begleitet er beim <strong>Hot Club Worms</strong>
-                    enthusiastisch mit Lust auf mehr Virtuosität,
-                    Rhythmus und dem crunchigen Sound.
-                </p>
-            </div>
-            <div class="col-2"></div>
-            <div class="col-4">
-                <div class="profile-image is-full-width">
-                    <%= image_tag "guitar.jpg" %>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-6">
                 <h4>Jakob Shabbir (g)</h4>
                 <p>
                     Jakob Shabbir, in Friedrichshafen am Bodensee
@@ -86,17 +26,17 @@ title: Ensemble
                     Anfangszeit unterstützt und ihn mit den Grundlagen
                     des Instruments vertraut gemacht.  Im Alter von 19
                     Jahren gründete Jakob seine damalige Bandformation
-                    <strong>Impro Tower</strong>, die am Bodensee das
-                    Publikum als Jazz Band unterhielt. Neben Saxophon,
-                    Klavier, Schlagzeug und Gesang hat Jakob als
-                    Gitarrist den Kern dieser Band formiert und
+                    <i>Impro Tower</i>, die am Bodensee das Publikum
+                    als Jazz Band unterhielt. Neben Kollegen am
+                    Saxophon, Klavier, Schlagzeug und Gesang hat Jakob
+                    als Gitarrist den Kern dieser Band formiert und
                     ausgebaut.
                 </p>
                 <p>
                     Ende 2019 gründete Jakob Shabbir mit Sebastian
                     Christ den <strong>Hot Club Worms</strong>, der
                     sich intensiv mit der Musik Django Reinhardts
-                    auseinander setzt.
+                    auseinandersetzt.
                 </p>
                 <p>
                     Seit Beginn seines musikalischen Wirkens
@@ -105,7 +45,7 @@ title: Ensemble
                     Bebop und Fusion.  Von seinem stetigen Interesse
                     angetrieben hat Jakob über die Jahre seine
                     Kenntnisse erweitert und zählt nunmehr als
-                    Kernmitglied des Hot Club Worms.
+                    Kernmitglied des <strong>Hot Club Worms</strong>.
                 </p>
             </div>
             <div class="col-2"></div>
@@ -117,11 +57,42 @@ title: Ensemble
         </div>
         <div class="row">
             <div class="col-6">
+                <h4>Alexander Herbrandt (g)</h4>
+                <p>
+                    Alexander Herbrandt hat einen Teil seiner Kindheit
+                    in Russland verbracht und lernte die ersten
+                    Akkorde von seinem Vater. Spielte dann viele Jahre
+                    russischen Chanson und die Gitarre wurde sein
+                    ständiger Begleiter.
+                </p>
+                <p>
+                    In seiner Studienzeit wurde er für die klassische
+                    Gitarre begeistert und lernte wenige der wichtigen
+                    Solostücke, was ihn technisch stark voranbrachte.
+                </p>
+                <p>
+                    Durch seine Frau und die vielen Aufenthalte in
+                    Spanien verliebte er sich in die Flamenco Musik
+                    und hatte etwas Zeit in die Spiel-Techniken
+                    einzutauchen, bevor er 2019 Sebastian und Jakob
+                    traf. Seit dem begleitet er beim <strong>Hot Club Worms</strong>
+                    enthusiastisch mit Lust auf mehr Virtuosität,
+                    Rhythmus und dem crunchigen Sound.
+                </p>
+            </div>
+            <div class="col-2"></div>
+            <div class="col-4">
+                <div class="profile-image is-full-width">
+                    <%= image_tag "guitar.jpg" %>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
                 <h4>Sebastian Rudolfo Christ (g)</h4>
                 <p>
-                    Sebastian <strong>Rudolfo</strong> Christ ist ein
-                    in Worms am Rhein ansässiger Jazz-Gitarrist und
-                    Kontrabassist.
+                    Sebastian ist ein in Worms am Rhein ansässiger
+                    Jazz-Gitarrist und Kontrabassist.
                 </p>
                 <p>
                     Sein Spezialgebiet sind die frühen Jazz-Stile der
@@ -154,6 +125,34 @@ title: Ensemble
             <div class="col-4">
                 <div class="profile-image is-full-width">
                     <%= image_tag "ben.jpg", class: "positioned"%>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <h4>Achim Kraus (ts, as, ss)</h4>
+                <p>
+                    Achim kann mittlerweile auf über etwa 40 Jahre
+                    Banderfahrung zurückblicken. Im Laufe der Zeit und
+                    durch wechselnde Musikformationen ergab sich für
+                    ihn eine Wanderung durch verschiedene
+                    Stilrichtungen in der Reihenfolge: Dixieland,
+                    Swing, Mainstream (Real Book Stücke), Oldies und
+                    Pop und zuletzt, und auch noch aktuell, Vocal
+                    Jazzrock (<a href="http://www.groovin-nana.de/">Groovin'Nana</a>).
+                </p>
+                <p>
+                    Durch die Mitwirkung beim <strong>Hot Club
+                    Worms</strong> findet er stilistisch nunmehr
+                    wieder zu seinen musikalischen Anfängen zurück und
+                    bringt dabei seine Erfahrungen aus den anderen
+                    Musik-Richtungen mit ein.
+                </p>
+            </div>
+            <div class="col-2"></div>
+            <div class="col-4">
+                <div class="profile-image is-full-width">
+                    <%= image_tag "achim.jpg" %>
                 </div>
             </div>
         </div>
