--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,29 +9,25 @@
                         eng umschlungen über das Trottoir. Und aus nicht allzu weiter Ferne erklingt die Musik, die zum Soundtrack
                         einer ganzen Stadt werden sollte.
                     </p>
-
                     <p>
                         In den beginnenden Dreißiger Jahren des letzten Jahrhunderts wurde von vier Ausnahmemusikern eine neue
-                        Musikrichtung geboren, welche untrennbar mit dem Paris und dem Flair der damaligen Zeit verbunden ist. Der <b>Hot
-                        Club Worms</b> bringt dieses Gefühl in das Rheinhessen der Gegenwart.
+                        Musikrichtung geboren, welche untrennbar mit dem Paris und dem Flair der damaligen Zeit verbunden ist. Der
+                        <b>Hot Club Worms</b> bringt dieses Gefühl in das Rheinhessen der Gegenwart.
                     </p>
-
                     <p>
-                        Die fünf Musiker aus Worms und Umgebung spielen Hot Jazz ganz im Sinne des Quintette du Hot Club de France,
-                        jenes legendäre Quintette gegründet von Django Reinhardt und Stéphane Grappelli im Paris der 1930er Jahre.
-                        Der einzige Unterschied besteht lediglich in der Tatsache, daß die Geige durch ein Saxophonen ersetzt wurde,
-                        was diesem sonst sehr traditionellen Quinette einen außerordentlich
+                        Die fünf Musiker aus Worms und Umgebung spielen Hot Jazz ganz im Sinne des <i>Quintette du Hot Club de France</i>,
+                        jenes legendäre Quintett gegründet von Django Reinhardt und Stéphane Grappelli im Paris der 1930er Jahre.
+                        Der einzige Unterschied besteht lediglich in der Tatsache, dass die Geige durch ein Saxophon ersetzt wurde,
+                        was diesem sonst sehr traditionellen Quintett einen außerordentlich
                         modernen Klang verleiht.
                     </p>
-
                     <p>
                         Der <b>Hot Club Worms</b> spielt klassische Early Jazz und Swing Stücke aus dem Great American Songbook, gängiges
                         Jazz manouche Repertoire sowie Bossa Nova und Rhumba inspirierte Rhythmen.
                     </p>
-
                     <p>
-                        Ob Duo oder Trio, bis hin zum Qunitette, der <b>Hot Club Worms</b> spielt in unterschiedlichen Formationen und wird
-                        dadurch jedem Anlaß musikalisch gerecht.
+                        Ob Duo oder Trio, bis hin zum Quintett, der <b>Hot Club Worms</b> spielt in
+                        unterschiedlichen Formationen und wird dadurch jedem Anlass musikalisch gerecht.
                     </p>
                 </div>
             </div>
