Make ensemble bios coherent

--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -9,10 +9,9 @@ title: Ensemble
             <div class="col-6">
                 <h4>Jakob Shabbir (g)</h4>
                 <p>
-                    Jakob Shabbir, in Friedrichshafen am Bodensee
-                    geboren, ist Mitglied einer musikalischen
-                    Sinti-Familie, die ihre Wurzeln in Deutschland und
-                    Frankreich hat.
+                    Jakob, in Friedrichshafen am Bodensee geboren, ist
+                    Mitglied einer musikalischen Sinti-Familie, die
+                    ihre Wurzeln in Deutschland und Frankreich hat.
                 </p>
                 <p>
                     Im Alter von 16 Jahren begann er auf der Gitarre
@@ -59,9 +58,9 @@ title: Ensemble
             <div class="col-6">
                 <h4>Alexander Herbrandt (g)</h4>
                 <p>
-                    Alexander Herbrandt hat einen Teil seiner Kindheit
-                    in Russland verbracht und lernte die ersten
-                    Akkorde von seinem Vater. Spielte dann viele Jahre
+                    Alexander hat einen Teil seiner Kindheit in
+                    Russland verbracht und lernte die ersten Akkorde
+                    von seinem Vater. Spielte dann viele Jahre
                     russischen Chanson und die Gitarre wurde sein
                     ständiger Begleiter.
                 </p>
@@ -119,7 +118,18 @@ title: Ensemble
         <div class="row">
             <div class="col-6">
                 <h4>Ben Melzer (b)</h4>
-                <p>Ben ist der Hausbassist im <strong>Hot Club Worms</strong>.</p>
+                <p>
+                    Als Sohn eines Jazz-Pianisten kam Ben schon seit
+                    frühester Kindheit mit dem Jazz in Berührung. Nach
+                    einigen Jahren Unterricht am Klavier und Saxophon fand
+                    er letztlich zum Bass.
+                </p>
+                <p>
+                    In den letzten 20 Jahren am E-Bass und Kontrabass
+                    spielte er in diversen Bands unterschiedlichster
+                    Genres. Jetzt sorgt er beim <strong>Hot Club für das</strong>
+                    musikalische Fundament.
+                </p>
             </div>
             <div class="col-2"></div>
             <div class="col-4">
