Change band photo

--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -123,8 +123,8 @@ title: Ensemble
                 <p>
                     In den letzten 20 Jahren am E-Bass und Kontrabass
                     spielte er in diversen Bands unterschiedlichster
-                    Genres. Jetzt sorgt er beim <strong>Hot Club für das</strong>
-                    musikalische Fundament.
+                    Genres. Jetzt sorgt er beim <strong>Hot Club Worms</strong> für
+                    das musikalische Fundament.
                 </p>
             </div>
             <div class="col-2"></div>
