--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -106,6 +106,11 @@ footer {
     }
 }
 
+#cookies-eu-banner {
+    position: fixed;
+    width: 90%;
+}
+
 // larger viewport
 
 @media screen and (min-width: 600px) {
