Add alex'profile pic

--- a/source/ensemble.html.erb
+++ b/source/ensemble.html.erb
@@ -82,7 +82,7 @@ title: Ensemble
             <div class="col-2"></div>
             <div class="col-4">
                 <div class="profile-image is-full-width">
-                    <%= image_tag "guitar.jpg" %>
+                    <%= image_tag "alex.jpg" %>
                 </div>
             </div>
         </div>
