Use print style sheet for onesheet

--- a/source/onesheet.html.erb
+++ b/source/onesheet.html.erb
@@ -58,7 +58,7 @@ layout: no-nav
                     <dt>Facebook</dt><dd>hotclubworms (<a href="https://www.facebook.com/hotclubworms/">https://www.facebook.com/hotclubworms/</a>)</dd>
                 </dl>
             </div>
-            <%= link_to "Dowload PDF", "/hot-club-worms.pdf", class: "button outline primary" %>
+            <%= link_to "Dowload PDF", "javascript:window.print();", id: "download-btn", class: "button outline primary" %>
         </div>
     </div>
 </div>
