--- a/source/layouts/no-nav.erb
+++ b/source/layouts/no-nav.erb
@@ -7,7 +7,8 @@
               content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- Use the title from a page's frontmatter if it has one -->
         <title><%= current_page.data.title || "Hot Club Worms" %></title>
-        <%= stylesheet_link_tag "site" %>
+        <%= stylesheet_link_tag "site", media: "screen" %>
+        <%= stylesheet_link_tag "print", media: "print" %>
     </head>
     <body>
         <div id="top" class="container">
