Add press quote to onesheet

--- a/source/onesheet.html.erb
+++ b/source/onesheet.html.erb
@@ -34,7 +34,12 @@ layout: no-nav
             <h2 id="org2a53728">PRESS</h2>
             <div class="outline-text-2" id="text-3">
                 <p>
-                    Demnächst mehr. 
+                    &raquo; Für die musikalische Unterhaltung beim
+                    Sommerfest der Mobilisten sorgte die Band "Hot
+                    Club Worms", deren Stücke und Musikstil gut bei
+                    den Gästen ankamen &laquo;
+                    <br/>
+                    <small><strong>- Bergstäßer Anzeiger</strong></small>
                 </p>
             </div>
         </div>
@@ -58,7 +63,7 @@ layout: no-nav
                     <dt>Facebook</dt><dd>hotclubworms (<a href="https://www.facebook.com/hotclubworms/">https://www.facebook.com/hotclubworms/</a>)</dd>
                 </dl>
             </div>
-            <%= link_to "Dowload PDF", "javascript:window.print();", id: "download-btn", class: "button outline primary" %>
+            <%= link_to "Drucken", "javascript:window.print();", id: "download-btn", class: "button outline primary" %>
         </div>
     </div>
 </div>
