--- a/source/concerts.html.erb
+++ b/source/concerts.html.erb
@@ -20,11 +20,13 @@ title: Termine
                                 <h3><%= event.title %></h3>
                             </header>
                             <p>
-                                <strong><%= date_string event.date %> - <%= time_string event.date %> Uhr</strong><br/>
+                                <strong><%= date_string event.date %></strong><br/>
                                 <em><%= event.location %></em>
                             </p>
                             <p><%= event.description %></p>
-                            <a href="<%= event.url %>">Link</a>
+                            <% if event.url? %>
+                                <a href="<%= event.url %>">Link</a>
+                            <% end %>
                         </div>
                     </div>
                     <% end %>
