Update cookie consent

--- a/source/layouts/no-nav.erb
+++ b/source/layouts/no-nav.erb
@@ -19,7 +19,7 @@
                 <p>
                     &copy; 2021 Sebastian Christ -
                     <%= link_to "Impressum", "/imprint.html" %> -
-                    <%= link_to "Datenschutzerklärung", "/privacy-policy.html" %> -
+                    <%= link_to "Datenschutzerklärung", "/privacy-policy.html" %>
                 </p>
             </footer>
         </div>
