--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,9 +13,18 @@
         <div id="top" class="container">
             <div class="row">
                 <div class="col">
-                    <div id="cookies-eu-banner" class="card" style="display: none;">
-                        Diese Seite verwendet Cookies. Bitte akzeptieren Sie Cookies um die Benutzung dieser Seite zu optimieren.
-                        <%= link_to "Mehr erfahren.", "/privacy-policy.html#cookies", id: "cookies-eu-more" %>
+                    <div id="cookies-eu-banner" class="card" style="display: none">
+                        Um die Benutzung dieser Seite zu verbesseren, binden wir Dienste von Drittanbietern ein, welche folgende
+                        Cookies verwenden:
+                        <ul>
+                            <li>YouTube-Cookies durch eingebettete YouTube-Videos</li>
+                        </ul>
+
+                        Durch Klick auf <b>Akzeptieren</b> erklären Sie sich damit einverstanden. Über die <b>Cookie-Einstellungen</b>
+                        im Footer haben Sie jederzeit die Möglichkeit, Ihre Einstellungen zu ändern.
+                        <br/>
+                        <%= link_to "Mehr Informationen.", "/privacy-policy.html#cookies", id: "cookies-eu-more" %>
+                        <br/>
                         <div>
                             <button class="button outline secondary" id="cookies-eu-reject">Ablehnen</button>
                             <button class="button success" id="cookies-eu-accept">Akzeptieren</button>
