Add booking email to landing page

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -33,6 +33,9 @@
                 Ob Duo oder Trio, bis hin zum Quintett, der <b>Hot Club Worms</b> spielt in
                 unterschiedlichen Formationen und wird dadurch jedem Anlass musikalisch gerecht.
             </p>
+            <p>
+                Buchungsanfragen an <a href="mailto:booking@hotclubworms.de">booking@hotclubworms.de</a>.
+            </p>
         </div>
     </div>
 </div>
