Add link to photos in GDrive to Promoters Onesheet

--- a/source/onesheet.html.erb
+++ b/source/onesheet.html.erb
@@ -50,7 +50,7 @@ layout: no-nav
                 <dl class="org-dl">
                     <dt>Website</dt><dd><a href="http://www.hotclubworms.de">http://www.hotclubworms.de</a></dd>
                     <dt>Youtube</dt><dd><a href="https://www.youtube.com/channel/UCE5cYaqH8XRtUiIkSReGpiw">https://www.youtube.com/channel/UCE5cYaqH8XRtUiIkSReGpiw</a></dd>
-                    <dt>Fotos</dt><dd>Folgt&#x2026;</dd>
+                    <dt>Fotos</dt><dd><a href="https://drive.google.com/drive/folders/1V7xPjPjRdi7TVT0wXgtcEhG6m2IcBmeP?usp=sharing">https://drive.google.com/drive/folders/1V7xPjPjRdi7TVT0wXgtcEhG6m2IcBmeP?usp=sharing</a></dd>
                 </dl>
             </div>
         </div>
